--- a/foodie_app/templates/recipe.html
+++ b/foodie_app/templates/recipe.html
@@ -13,10 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/recipe-page.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="{% static 'js/app.js' %}"></script> 
 </head>
-<body>
+<body class="body">
     <header id="header" class="bg-white d-flex p-3 align-items-center shadow-sm mt-0">
         <h2 class="pr-5 mb-0"><a href="/home" class="home">Foodie Favs</a></h2>
         <a href="/home/new_recipe" class="new-recipe p-1 rounded ml-auto mr-2">+ Recipe</a>
@@ -25,7 +25,7 @@
     </header>
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="pt-5"></div>
-    <div class="w-50 shadow-sm mt-5 p-4 ml-auto mr-auto rounded">
+    <div class="w-50 shadow-sm mt-5 p-4 ml-auto mr-auto rounded recipe-card">
         <h2 class="text-center">{{recipe.name}}</h2>
         <p class="text-center">{{recipe.desc}}</p>
         <div class="pl-4 pr-4 pt-1 pb-2">
