--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -58,10 +58,13 @@
             </div>
         </div>
         <div class="w-25 d-flex flex-column align-items-center">
-            <h2 class="heading ">Recipies</h2>
+            <h2 class="heading ">Favorite Recipies</h2>
             <a href="/home/new_recipe" class="new-recipe p-1 rounded shadow-sm bg-white rounded">Add New Recipe</a>
             {% for recipe in recipies %}
-                <p>{{recipe.name}}</p>
+                <div class="recipe-card rounded shadow-sm w-75 p-3 m-2">
+                    <p class= "text-center"><a id="recipe-text" href="/home/recipe_{{recipe.id}}">{{recipe.name}}</a></p>
+                    <p>{{recipe.desc}}</p>
+                </div>
             {% endfor %}
         </div>
         <div class="w-25">
