--- a/foodie_app/templates/recipe.html
+++ b/foodie_app/templates/recipe.html
@@ -48,6 +48,22 @@
                     <input class="btn btn-secondary p-1 pl-2 pr-2" type="submit" name="edit" value="Edit">
                 </form>
                 {% endif %}
+                {% for favorite_user in recipe.users_who_favorite.all %}
+                <form action="/home/remove_favorite" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="recipe_id" value="{{ recipe.id }}">
+                    <input type="hidden" name="user_id" value="{{ user.id }}">
+                    <input class="btn favorite ml-2 pt-1 pb-1" type="submit" name="add_fav" value="Remove from Favorites">
+                </form>
+                {% endfor %}
+            {% if not user in recipe.users_who_favorite.all %}
+            <form class="mt-0 mb-1" action="/home/add_favorite" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="recipe_id" value="{{ recipe.id }}">
+                <input type="hidden" name="user_id" value="{{ user.id }}">
+                <input class="btn favorite ml-2 pt-1 pb-1" type="submit" name="add_fav" value="Add to Favorites">
+            </form>
+            {% endif %}
             </div>
             
         </div>
