--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -22,6 +22,7 @@
         <a href="/home/{{user.id}}" class="icon rounded p-1">My Profile</a>
         <a href="/home/log_off" class="btn ml-2 p-1" id="log-off">Log Off</a>
     </header>
+    <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="pt-5"></div>
     <div class="d-flex mt-5 pt-5">
         <div class="w-50">
