--- a/foodie_app/templates/home.html
+++ b/foodie_app/templates/home.html
@@ -29,7 +29,7 @@
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="d-flex flex-wrap w-75 ml-auto mr-auto">
         {% for recipe in recipes %}
-        <div class="recipe-card rounded shadow-sm w-25 p-3">
+        <div class="recipe-card rounded shadow-sm w-25 p-3 mb-1">
             <h3 class= "text-center"><a id="recipe-text" href="/home/recipe_{{recipe.id}}">{{recipe.name}}</a></h3>
             <p>{{recipe.desc}}</p>
             {% if recipe.creator.id == user.id %}
