--- a/foodie_app/templates/menu.html
+++ b/foodie_app/templates/menu.html
@@ -24,6 +24,68 @@
         <a href="/home/log_off" class="btn ml-2 p-1" id="log-off">Log Off</a>
     </header>
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
-    
+    <div class="pt-5"></div>
+    <div class="w-50 shadow-sm mt-5 p-4 ml-auto mr-auto rounded recipe-card">
+        <form action="/home/create_menu" method="POST">
+            {% csrf_token %}
+            <div>
+                <label for="sunday">Sunday: </label>
+                <select name="sunday" id="sunday">
+                    {% for recipe in recipes %}
+                        <option value="{{recipe.id}}">{{recipe.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div>
+                <label for="monday">Monday: </label>
+                <select name="monday" id="monday">
+                    {% for recipe in recipes %}
+                        <option value="{{recipe.id}}">{{recipe.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div>
+                <label for="tuesday">Tuesday: </label>
+                <select name="tuesday" id="tuesday">
+                    {% for recipe in recipes %}
+                        <option value="{{recipe.id}}">{{recipe.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div>
+                <label for="wednesday">Wednesday: </label>
+                <select name="wednesday" id="wednesday">
+                    {% for recipe in recipes %}
+                        <option value="{{recipe.id}}">{{recipe.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div>
+                <label for="thursday">Thursday: </label>
+                <select name="thursday" id="thursday">
+                    {% for recipe in recipes %}
+                        <option value="{{recipe.id}}">{{recipe.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div>
+                <label for="friday">Friday: </label>
+                <select name="friday" id="friday">
+                    {% for recipe in recipes %}
+                        <option value="{{recipe.id}}">{{recipe.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div>
+                <label for="saturday">Saturday: </label>
+                <select name="saturday" id="saturday">
+                    {% for recipe in recipes %}
+                        <option value="{{recipe.id}}">{{recipe.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <input type="submit" name="submit" id="submit" value="Create Menu">
+        </form>
+    </div>
 </body>
 </html>
