add menu content to page

--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -31,31 +31,46 @@
                 <div class="day-row d-flex justify-content-around p-1">
                     <div class="day rounded shadow-sm">
                         <p>Sunday</p>
+                        <p>{{menu.sunday.name}}</p>
+                        <a href="/home/recipe_{{menu.sunday.id}}">View Recipe</a>
                     </div>
                     <div class="day rounded shadow-sm">
                         <p>Monday</p>
+                        <p>{{menu.monday.name}}</p>
+                        <a href="/home/recipe_{{menu.monday.id}}">View Recipe</a>
                     </div>
                     <div class="day rounded shadow-sm">
                         <p>Tuesday</p>
+                        <p>{{menu.monday.name}}</p>
+                        <a href="/home/recipe_{{menu.monday.id}}">View Recipe</a>
                     </div>
                 </div>
 
                 <div class="day-row d-flex justify-content-around p-1">
                     <div class="day rounded shadow-sm">
                         <p>Wednesday</p>
+                        <p>{{menu.wednesday.name}}</p>
+                        <a href="/home/recipe_{{menu.wednesday.id}}">View Recipe</a>
                     </div>
                     <div class="day rounded shadow-sm">
                         <p>Thursday</p>
+                        <p>{{menu.thursday.name}}</p>
+                        <a href="/home/recipe_{{menu.thursday.id}}">View Recipe</a>
                     </div>
                     <div class="day rounded shadow-sm">
                         <p>Friday</p>
+                        <p>{{menu.friday.name}}</p>
+                        <a href="/home/recipe_{{menu.friday.id}}">View Recipe</a>
                     </div>
                 </div>
                 <div class="day-row d-flex justify-content-around p-1">
                     <div class="day rounded shadow-sm">
                         <p>Saturday</p>
+                        <p>{{menu.saturday.name}}</p>
+                        <a href="/home/recipe_{{menu.saturday.id}}">View Recipe</a>
                     </div>
                 </div>
+                <a href="/home/edit_menu">Edit Menu</a>
             </div>
         </div>
         <div class="w-25 d-flex flex-column align-items-center">
