--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -35,45 +35,45 @@
             </div>
             <div class="menu w-100 m-3 d-flex flex-column p-1 rounded">
                 <div class="day-row d-flex justify-content-around p-1">
-                    <div class="day rounded shadow-sm">
+                    <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Sunday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.sunday.name}}</p>
-                        <a href="/home/recipe_{{menu.sunday.id}}" class="btn view-recipe">View Recipe</a>
+                        <a href="/home/recipe_{{menu.sunday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View Recipe</a>
                     </div>
-                    <div class="day rounded shadow-sm">
+                    <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Monday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.monday.name}}</p>
-                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe">View Recipe</a>
+                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View Recipe</a>
                     </div>
-                    <div class="day rounded shadow-sm">
+                    <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Tuesday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.monday.name}}</p>
-                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe">View Recipe</a>
+                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View Recipe</a>
                     </div>
                 </div>
 
                 <div class="day-row d-flex justify-content-around p-1">
-                    <div class="day rounded shadow-sm">
+                    <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Wednesday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.wednesday.name}}</p>
-                        <a href="/home/recipe_{{menu.wednesday.id}}" class="btn view-recipe">View Recipe</a>
+                        <a href="/home/recipe_{{menu.wednesday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View Recipe</a>
                     </div>
-                    <div class="day rounded shadow-sm">
+                    <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Thursday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.thursday.name}}</p>
-                        <a href="/home/recipe_{{menu.thursday.id}}" class="btn view-recipe">View Recipe</a>
+                        <a href="/home/recipe_{{menu.thursday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View Recipe</a>
                     </div>
-                    <div class="day rounded shadow-sm">
+                    <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Friday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.friday.name}}</p>
-                        <a href="/home/recipe_{{menu.friday.id}}" class="btn view-recipe">View Recipe</a>
+                        <a href="/home/recipe_{{menu.friday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View Recipe</a>
                     </div>
                 </div>
                 <div class="day-row d-flex justify-content-around p-1">
-                    <div class="day rounded shadow-sm">
+                    <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Saturday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.saturday.name}}</p>
-                        <a href="/home/recipe_{{menu.saturday.id}}" class="btn view-recipe">View Recipe</a>
+                        <a href="/home/recipe_{{menu.saturday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View Recipe</a>
                     </div>
                 </div>
             </div>
@@ -85,6 +85,14 @@
             <div class="recipe-card rounded shadow-sm w-75 p-3 m-2">
                 <p class="text-center"><a id="recipe-text" href="/home/recipe_{{recipe.id}}">{{recipe.name}}</a></p>
                 <p>{{recipe.desc}}</p>
+                {% for favorite_user in recipe.users_who_favorite.all %}
+                <form action="/home/{{user.id}}/remove_favorite_profile" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="recipe_id" value="{{ recipe.id }}">
+                    <input type="hidden" name="user_id" value="{{ user.id }}">
+                    <input class="btn favorite ml-2 pt-1 pb-1" type="submit" name="add_fav" value="Remove">
+                </form>
+                {% endfor %}
             </div>
             {% endfor %}
         </div>
@@ -97,7 +105,7 @@
                         <div class="d-flex alin-items-start mb-2">
                             <li class="pt-2">{{item.item}}</li>
                             {% if item.user.id == user.id %}
-                            <form action="/home/delete_item" method="POST">
+                            <form action="/home/{{user.id}}/delete_item" method="POST">
                                 {% csrf_token %}
                                 <input type="hidden" name="item_id" value="{{ item.id }}">
                                 <input class="btn btn-danger p-1 m-2" type="submit" name="delete" value="Delete">
