--- a/foodie_app/templates/edit_recipe.html
+++ b/foodie_app/templates/edit_recipe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +17,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <script src="{% static 'js/app.js' %}"></script>
 </head>
+
 <body class="body">
     <header id="header" class="bg-white d-flex p-3 align-items-center shadow-sm mt-0">
         <h2 class="pr-5 mb-0"><a href="/home" class="home">Foodie Favs</a></h2>
@@ -38,7 +40,8 @@
             <div class="form-group">
                 <label class="label font-weight-bold" for="ingredients">Ingredients:</label>
                 <br>
-                <textarea name="ingredients" id="ingredients" cols="30" rows="5" class="w-50">{{recipe.ingredients}}</textarea>
+                <textarea name="ingredients" id="ingredients" cols="30" rows="5"
+                    class="w-50">{{recipe.ingredients}}</textarea>
             </div>
             <div class="form-group">
                 <label class="label font-weight-bold" for="steps">Steps:</label>
@@ -51,9 +54,11 @@
                 <textarea name="source" id="source" cols="45" rows="1" class="w-50">{{recipe.source}}</textarea>
             </div>
             <input type="hidden" name="recipe_id" value="{{ recipe.id }}">
-            <input class="mt-3 edit-recipe rounded shadow-sm" type="submit" name="submit" id="submit" value="Update Recipe">
+            <input class="mt-3 edit-recipe rounded shadow-sm" type="submit" name="submit" id="submit"
+                value="Update Recipe">
         </form>
     </div>
-    
+
 </body>
+
 </html>
