update feature list

--- a/login/templates/foodie_favs.html
+++ b/login/templates/foodie_favs.html
@@ -21,21 +21,21 @@
     </header>
     <div class="m-5 p-5"></div>
     <div class="about w-75 d-flex ml-auto mr-auto p-5">
-        <div class="w-25">
-            <h4>Feature One</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ea harum dolorem nesciunt minus quia.</p>
+        <div class="w-25 text-center m-2 p-2">
+            <h4>Online Recipe Book</h4>
+            <p>Keep all your recipies in one convenient, online place.</p>
         </div>
-        <div class="w-25">
-            <h4>Feature Two</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ea harum dolorem nesciunt minus quia.</p>
+        <div class="w-25 text-center m-2 p-2">
+            <h4>Meal Plan</h4>
+            <p>Use the menu feature to plan your meals for the week.</p>
         </div>
-        <div class="w-25">
-            <h4>Feature Three</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ea harum dolorem nesciunt minus quia.</p>
+        <div class="w-25 text-center m-2 p-2">
+            <h4>Shopping List</h4>
+            <p>Add items to your shopping list while you plan your meals.</p>
         </div>
-        <div class="w-25">
-            <h4>Feature Four</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ea harum dolorem nesciunt minus quia.</p>
+        <div class="w-25 text-center m-2 p-2">
+            <h4>Favorite Recipes</h4>
+            <p>Favorite your frequently used recipies to keep them at the top of your mind.</p>
         </div>
     </div>
 </body>
