add rounded corners to feature bar

--- a/login/templates/foodie_favs.html
+++ b/login/templates/foodie_favs.html
@@ -20,7 +20,7 @@
         <a href="/login" class="btn btn-lg ml-auto" id="sign-in">Sign In</a>
     </header>
     <div class="m-5 p-5"></div>
-    <div class="about w-75 d-flex ml-auto mr-auto p-5">
+    <div class="about w-75 d-flex ml-auto mr-auto p-5 rounded">
         <div class="w-25 text-center m-2 p-2">
             <h4>Online Recipe Book</h4>
             <p>Keep all your recipies in one convenient, online place.</p>
