--- a/foodie_app/templates/home.html
+++ b/foodie_app/templates/home.html
@@ -25,7 +25,7 @@
         <a href="/home/{{user.id}}" class="icon rounded p-1">My Profile</a>
         <a href="/home/log_off" class="btn ml-2 p-1" id="log-off">Log Off</a>
     </header>
-    <h1 class="heading m-3 mt-5 pt-5">Recipies</h1>
+    <h1 class="heading m-3 mt-5 pt-5">Recipes</h1>
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
     <div class="d-flex flex-wrap w-75 ml-auto mr-auto">
         {% for recipe in recipes %}
