--- a/login/templates/register.html
+++ b/login/templates/register.html
@@ -21,25 +21,37 @@
     </header>
     <div style="height: 700px;" class="w-50 ml-auto mr-auto mt-5 mb-5 shadow rounded border-0" id="login">
         <div class="form w-50 h-100 container d-flex flex-column justify-content-center mr-0">
+            {% if messages %}
+            <ul class="messages mt-2">
+                {% for message in messages %}
+                <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
             <div>
                 <h1 class="text-center">Register</h1>
                 <form class="mr-auto ml-auto w-100 text-center" action="/new_user" method="POST">
                     {% csrf_token %}
-                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="first_name" id="first_name" placeholder="first name">
-                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="last_name" id="last_name" placeholder="last name">
-                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="email" id="email" placeholder="email">
-                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="password" id="password" placeholder="password">
-                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="conf_password" id="conf_password" placeholder=" confirm password">
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="first_name"
+                        id="first_name" placeholder="first name">
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="last_name"
+                        id="last_name" placeholder="last name">
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="email"
+                        id="email" placeholder="email">
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="password"
+                        id="password" placeholder="password">
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="conf_password"
+                        id="conf_password" placeholder=" confirm password">
                     <br>
                     <input class="sign-in w-25 m-2 p-2 shadow-sm rounded border-0" type="submit" value="Register">
                 </form>
                 <p class="text-center">Already a user? <a class="text-primary" href="/login"><u>Sign In</u></a></p>
             </div>
-            
+
         </div>
-        
+
     </div>
-            
+
 
 </body>
 
