--- a/login/static/css/login.css
+++ b/login/static/css/login.css
@@ -12,7 +12,7 @@
 
 #login {
     background-image: url("../img/sushi.jpg");
-    background-size: contain;
+    background-size: 550px 700px;
 }
 
 .form {
