update password input

--- a/login/templates/register.html
+++ b/login/templates/register.html
@@ -38,9 +38,9 @@
                         id="last_name" placeholder="last name">
                     <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="email"
                         id="email" placeholder="email">
-                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="password"
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="password" name="password"
                         id="password" placeholder="password">
-                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="conf_password"
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="password" name="conf_password"
                         id="conf_password" placeholder=" confirm password">
                     <br>
                     <input class="sign-in w-25 m-2 p-2 shadow-sm rounded border-0" type="submit" value="Register">
