--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -34,7 +34,7 @@
                     {% csrf_token %}
                     <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="login_email"
                         id="login_email" placeholder="email">
-                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="text" name="login_pass"
+                    <input class="w-50 m-2 p-2 shadow-sm rounded border-0 text-center" type="password" name="login_pass"
                         id="login_pass" placeholder="password">
                     <br>
                     <input class="sign-in w-25 m-2 p-2 shadow-sm rounded border-0" type="submit" value="Sign In">
