add functionality for filtering menu by user_id

--- a/foodie_app/templates/menu.html
+++ b/foodie_app/templates/menu.html
@@ -86,6 +86,7 @@
                     {% endfor %}
                 </select>
             </div>
+            <input type="hidden" name="user_id" id="user_id" value="{{user.id}}">
             <input type="submit" name="submit" id="submit" value="Create Menu">
         </form>
     </div>
