update recipe card

--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -42,20 +42,17 @@
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Sunday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.sunday.name}}</p>
-                        <a href="/home/recipe_{{menu.sunday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View
-                            Recipe</a>
+                        <a href="/home/recipe_{{menu.sunday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Monday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.monday.name}}</p>
-                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View
-                            Recipe</a>
+                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Tuesday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.monday.name}}</p>
-                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View
-                            Recipe</a>
+                        <a href="/home/recipe_{{menu.monday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
                     </div>
                 </div>
 
@@ -63,28 +60,24 @@
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Wednesday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.wednesday.name}}</p>
-                        <a href="/home/recipe_{{menu.wednesday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View
-                            Recipe</a>
+                        <a href="/home/recipe_{{menu.wednesday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Thursday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.thursday.name}}</p>
-                        <a href="/home/recipe_{{menu.thursday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View
-                            Recipe</a>
+                        <a href="/home/recipe_{{menu.thursday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
                     </div>
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Friday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.friday.name}}</p>
-                        <a href="/home/recipe_{{menu.friday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View
-                            Recipe</a>
+                        <a href="/home/recipe_{{menu.friday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
                     </div>
                 </div>
                 <div class="day-row d-flex justify-content-around p-1">
                     <div class="day rounded shadow-sm d-flex flex-column">
                         <p class="font-weight-bold pt-2">Saturday</p>
                         <p class="w-75 ml-auto mr-auto">{{menu.saturday.name}}</p>
-                        <a href="/home/recipe_{{menu.saturday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">View
-                            Recipe</a>
+                        <a href="/home/recipe_{{menu.saturday.id}}" class="btn view-recipe w-50 ml-auto mr-auto">Recipe</a>
                     </div>
                 </div>
             </div>
