--- a/foodie_app/templates/recipe.html
+++ b/foodie_app/templates/recipe.html
@@ -50,7 +50,7 @@
                     <input class="btn btn-secondary p-1 pl-2 pr-2" type="submit" name="edit" value="Edit">
                 </form>
                 {% endif %}
-                {% for favorite_user in recipe.users_who_favorite.all %}
+                {% if user in recipe.users_who_favorite.all %}
                 <form action="/home/{{recipe.id}}/remove_favorite" method="POST">
                     {% csrf_token %}
                     <input type="hidden" name="recipe_id" value="{{ recipe.id }}">
@@ -58,7 +58,7 @@
                     <input class="btn favorite ml-2 pt-1 pb-1" type="submit" name="add_fav"
                         value="Remove from Favorites">
                 </form>
-                {% endfor %}
+                {% endif %}
                 {% if not user in recipe.users_who_favorite.all %}
                 <form class="mt-0 mb-1" action="/home/{{recipe.id}}/add_favorite" method="POST">
                     {% csrf_token %}
