add update profile functionality

--- a/foodie_app/static/css/style.css
+++ b/foodie_app/static/css/style.css
@@ -52,7 +52,7 @@ h2, .home {
     font-size: 1.15em;
 }
 
-#log-off, .edit-recipe, .favorite, .view-recipe, .save-menu {
+#log-off, .edit-recipe, .favorite, .view-recipe, .save-menu, .submit {
     background-color: #303c6c;
     color: #d2fdff;
 }
