--- a/foodie_app/templates/profile_settings.html
+++ b/foodie_app/templates/profile_settings.html
@@ -23,5 +23,23 @@
         <a href="/home/{{user.id}}" class="icon rounded p-1">My Profile</a>
         <a href="/home/log_off" class="btn ml-2 p-1" id="log-off">Log Off</a>
     </header>
+    <div class="mt-5 pt-5">
+        <div class="w-50">
+            <form action="/home/{{user.id}}/update_profile" method="POST">
+                {% csrf_token %}
+                <input class="w-50 m-2 p-2 shadow-sm rounded border-0" type="text" name="first_name"
+                    id="first_name" value="{{user.first_name}}">
+                <input class="w-50 m-2 p-2 shadow-sm rounded border-0" type="text" name="last_name"
+                    id="last_name" value="{{user.last_name}}">
+                <input class="w-50 m-2 p-2 shadow-sm rounded border-0" type="text" name="email"
+                    id="email" value="{{user.email}}">
+                <br>
+                <textarea name="profile_desc" id="profile_desc" cols="30" rows="10" class="w-50 m-2 p-2 shadow-sm rounded border-0">{{user.profile_desc}}</textarea>
+                <br>
+                <input class="submit m-2 p-2 shadow-sm rounded border-0" type="submit" value="Update">
+            </form>
+        </div>
+        
+    </div>
 </body>
 </html>
