--- a/foodie_app/templates/user_profile.html
+++ b/foodie_app/templates/user_profile.html
@@ -22,7 +22,7 @@
     <header id="header" class="bg-white d-flex p-3 align-items-center shadow-sm mt-0">
         <h2 class="pr-5 mb-0"><a href="/home" class="home">Foodie Favs</a></h2>
         <a href="/home/new_recipe" class="new-recipe p-1 rounded ml-auto mr-2">+ Recipe</a>
-        <a href="/home/{{user.id}}" class="icon rounded p-1">My Profile</a>
+        <a href="/home/{{user.id}}/settings" class="icon rounded p-1">Settings</a>
         <a href="/home/log_off" class="btn ml-2 p-1" id="log-off">Log Off</a>
     </header>
     <button id="topBtn" title="Go to top" class="btn rounded shadow">Top</button>
