update shopping list item delete icon

--- a/foodie_app/static/css/style.css
+++ b/foodie_app/static/css/style.css
@@ -92,3 +92,7 @@ h2, .home {
         border: 3px solid #d2fdff;
 
 }
+
+.fa-input {
+    font-family: "FontAwesome",Arial, Helvetica, sans-serif;
+}
